Fix taskboard bugs, calibration
This picks parts 3,4,9,10 without issues.

--- a/o2as_msgs/CMakeLists.txt
+++ b/o2as_msgs/CMakeLists.txt
@@ -19,9 +19,7 @@ add_service_files(DIRECTORY srv)
 
 # Generate actions in the 'action' folder
 add_action_files( 
-  DIRECTORY action 
-  FILES ToolsCommand.action)
-
+  DIRECTORY action )
 
 # # Generate added messages and services with any dependencies listed here
 
