Add some functionalities on debug_monitor

--- a/o2as_debug_monitor/CMakeLists.txt
+++ b/o2as_debug_monitor/CMakeLists.txt
@@ -164,10 +164,10 @@ message("catkin_LIBRARIES = ${catkin_LIBRARIES}")
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# install(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+install(PROGRAMS
+  scripts/test_debug_monitor.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark the nodelet library for installation
 install(TARGETS o2as_debug_monitor
