--- a/o2as_fastening_tools/config/screw_control.yaml
+++ b/o2as_fastening_tools/config/screw_control.yaml
@@ -1,14 +1,22 @@
 screw_control:
-  - name: m5_tool              # Name of screw fastening tool
+  - name: screw_tool_m5        # Name of screw fastening tool
     digital_in_port: 0         # The pin to which the pressure sensor is connected
     digital_out_port_vac: 0    # The pin to which the 'vac' of vacuum pump unit is connected
     digital_out_port_blow: 1   # The pin to which the 'blow' of vacuum pump unit is connected
-  - name: m4_tool
+  - name: screw_tool_m4
     digital_in_port: 1
     digital_out_port_vac: 1
     digital_out_port_blow: 2
-  - name: m3_tool
+  - name: screw_tool_m3
     digital_in_port: 2
     digital_out_port_vac: 2
     digital_out_port_blow: 3
+  - name: nut_tool_m6
+    digital_in_port: 3
+    digital_out_port_vac: 3
+    digital_out_port_blow: 4
+  - name: set_screw_tool
+    digital_in_port: 4
+    digital_out_port_vac: 4
+    digital_out_port_blow: 5
 
