WIP: Fix suction driver & naming
Suction/eject commands are inverted. screw_suctioned topics do not work fully.

--- a/o2as_fastening_tools/config/suction_control.yaml
+++ b/o2as_fastening_tools/config/suction_control.yaml
@@ -1,4 +1,4 @@
-screw_control:
+suction_control:
   - name: screw_tool_m5        # Name of screw fastening tool
     digital_in_port: 0         # The pin to which the pressure sensor is connected
     digital_out_port_vac: 0    # The pin to which the 'vac' of vacuum pump unit is connected
