--- a/o2as_routines/config/kitting_part_bin_list_auto.yaml
+++ b/o2as_routines/config/kitting_part_bin_list_auto.yaml
@@ -1,3 +1,10 @@
-part_bin_list: {part_11: set1_bin2_3, part_12: set2_bin1_2, part_13: set1_bin2_4,
-  part_16: set2_bin1_3, part_17: set2_bin1_4, part_18: set2_bin1_1, part_4: set1_bin2_1,
-  part_6: set1_bin3_1, part_8: set1_bin2_2, part_9: set2_bin1_5}
+part_bin_list: {part_11: set1_bin2_3, 
+part_12: set2_bin1_2, 
+part_13: set1_bin2_4,
+  part_16: set2_bin1_3, 
+  part_17: set2_bin1_4, 
+  part_18: set2_bin1_1, 
+  part_4: set1_bin2_1,
+  part_6: set1_bin3_1, 
+  part_8: set1_bin2_2, 
+  part_9: set2_bin1_5}
