Add kitting strategy
This should run completely in simulation.

--- a/o2as_routines/config/kitting_tray_list.yaml
+++ b/o2as_routines/config/kitting_tray_list.yaml
@@ -1,14 +1,14 @@
 tray_id:
-  part_4 : "set3_tray_1_partition_4"
-  part_5 : "set3_tray_2_partition_6"
-  part_6 : "set3_tray_1_partition_3"
-  part_7 : "set3_tray_1_partition_2"
-  part_8 : "set3_tray_2_partition_1"
-  part_9 : "set3_tray_2_partition_4"
-  part_10: "set3_tray_2_partition_7"
-  part_11: "set3_tray_1_partition_1"
-  part_12: "set3_tray_2_partition_3"
-  part_13: "set3_tray_1_partition_5"
-  part_14: "set3_tray_2_partition_2"
-  part_15: "set3_tray_2_partition_5"
-  part_16: "set3_tray_2_partition_8"
+  part_4 : "tray_1_partition_4"
+  part_5 : "tray_2_partition_6"
+  part_6 : "tray_1_partition_3"
+  part_7 : "tray_1_partition_2"
+  part_8 : "tray_2_partition_1"
+  part_9 : "tray_2_partition_4"
+  part_10: "tray_2_partition_7"
+  part_11: "tray_1_partition_1"
+  part_12: "tray_2_partition_3"
+  part_13: "tray_1_partition_5"
+  part_14: "tray_2_partition_2"
+  part_15: "tray_2_partition_5"
+  part_16: "tray_2_partition_8"
