--- a/o2as_routines/config/kitting_parts_bin_list.yaml
+++ b/o2as_routines/config/kitting_parts_bin_list.yaml
@@ -1,2 +1,2 @@
-part_bin_list: {4: bin_2_1, 6: bin_3_1, 8: bin_2_2, 9: bin_1_1, 11: bin_2_3, 12: bin_1_2,
-  13: bin_2_4, 16: bin_1_3, 17: bin_1_4, 18: bin_1_5}
+part_bin_list: {4: bin2_1, 6: bin3_1, 8: bin2_2, 9: bin1_1, 11: bin2_3, 12: bin1_2,
+  13: bin2_4, 16: bin1_3, 17: bin1_4, 18: bin1_5}
