--- a/o2as_fastening_tools/config/suction_control.yaml
+++ b/o2as_fastening_tools/config/suction_control.yaml
@@ -11,12 +11,12 @@ suction_control:
     digital_in_port: 2
     digital_out_port_vac: 4
     digital_out_port_blow: 5
-  - name: nut_tool_m6
+  # - name: nut_tool_m6
+  #   digital_in_port: 3
+  #   digital_out_port_vac: 6
+  #   digital_out_port_blow: 7
+  - name: suction_tool
     digital_in_port: 3
     digital_out_port_vac: 6
     digital_out_port_blow: 7
-  - name: set_screw_tool
-    digital_in_port: 4
-    digital_out_port_vac: 8
-    digital_out_port_blow: 9
 
