Fixed conflicts with popped stashes.

--- a/o2as_easy_handeye/package.xml
+++ b/o2as_easy_handeye/package.xml
@@ -55,6 +55,9 @@
   <depend>geometry_msgs</depend>
   <depend>std_srvs</depend>
   <depend>visp_hand2eye_calibration</depend>
+  <depend>sensor_msgs</depend>
+  <depend>opencv2</depend>
+  <depend>cv_bridge</depend>
 
   <exec_depend>tf</exec_depend>
 
