--- a/o2as_easy_handeye/CMakeLists.txt
+++ b/o2as_easy_handeye/CMakeLists.txt
@@ -59,7 +59,6 @@ add_executable(quat2rpy
 target_link_libraries(quat2rpy
   ${catkin_LIBRARIES}
   ${roscpp_LIBRARIES}
-  gsl
 )
 
 add_dependencies(quat2rpy
@@ -81,8 +80,7 @@ catkin_install_python(
 
 install(
   TARGETS
-    calibrator
-    quat2rpy
+    calibrator quat2rpy
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
