Bug fix in blob detection

--- a/o2as_blob_detection/cfg/o2asBlobDetection.cfg
+++ b/o2as_blob_detection/cfg/o2asBlobDetection.cfg
@@ -30,5 +30,5 @@ gen.add("filterByInertia_param",   bool_t,   0, "A Boolean parameter",  False)
 gen.add("minInertiaRatio_param", double_t, 0, "A double parameter",    0.1, 0,   1)
 gen.add("maxInertiaRatio_param", double_t, 0, "A double parameter",    0.5, 0,   1)
 
-exit(gen.generate(PACKAGE, "blob_test", "O2asBlobDetection"))
+exit(gen.generate(PACKAGE, "blob_test", "o2asBlobDetection"))
 
