--- a/o2as_debug_monitor/CMakeLists.txt
+++ b/o2as_debug_monitor/CMakeLists.txt
@@ -59,11 +59,10 @@ add_message_files(
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  ResetTimer.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -75,7 +74,7 @@ add_message_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
-  sensor_msgs#   std_msgs
+  sensor_msgs std_msgs
 )
 
 ################################################
