--- a/o2as_easy_handeye/package.xml
+++ b/o2as_easy_handeye/package.xml
@@ -50,6 +50,9 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>pcl_ros</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
+
   <exec_depend>message_runtime</exec_depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
@@ -58,8 +61,10 @@
   <depend>sensor_msgs</depend>
   <depend>opencv2</depend>
   <depend>cv_bridge</depend>
+  <depend>dynamic_reconfigure</depend>
 
   <exec_depend>tf</exec_depend>
+  <exec_depend>libpcl-all</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
