--- a/o2as_debug_monitor/CMakeLists.txt
+++ b/o2as_debug_monitor/CMakeLists.txt
@@ -17,6 +17,7 @@ find_package(catkin REQUIRED COMPONENTS
   image_transport
   cv_bridge
   message_generation
+  o2as_msgs
 )
 
 ## System dependencies are found with CMake's conventions
