Added code for checking calibration with real robots

--- a/o2as_aruco_ros/CMakeLists.txt
+++ b/o2as_aruco_ros/CMakeLists.txt
@@ -2,27 +2,26 @@ cmake_minimum_required(VERSION 2.8.3)
 project(o2as_aruco_ros)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
+add_compile_options(-w)
 add_compile_options(-std=c++14)
+add_compile_options(-fpermissive)
+add_compile_options(-pthread)
 
-find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  dynamic_reconfigure
-  geometry_msgs
-  image_transport
-  std_msgs
-  std_srvs
-  cv_bridge
-  aruco
-  aruco_ros
-  aruco_msgs
-  tf
+find_package(catkin REQUIRED
+  COMPONENTS
+    dynamic_reconfigure
+    geometry_msgs
+    image_transport
+    std_msgs
+    std_srvs
+    cv_bridge
+    aruco
+    aruco_ros
+    aruco_msgs
+    tf
 )
 
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-catkin_package(
-)
+find_package(OpenCV REQUIRED)
 
 ###########
 ## Build ##
@@ -30,6 +29,24 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
   ${OpenCV_INCLUDE_DIRS}
+)
+
+add_message_files(
+  FILES
+    Corners.msg
+)
+
+generate_messages(
+  DEPENDENCIES
+    geometry_msgs
+)
+
+catkin_package(
+  CATKIN_DEPENDS
+    roscpp
+    message_runtime
+    std_msgs
+    geometry_msgs
 )
 
 add_executable(o2as_single
