--- a/o2as_aruco_ros/package.xml
+++ b/o2as_aruco_ros/package.xml
@@ -49,9 +49,9 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
 
   <exec_depend>message_runtime</exec_depend>
+  <depend>roscpp</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>image_transport</depend>
