--- a/aist_gazebo/o2as_gazebo/CMakeLists.txt
+++ b/aist_gazebo/o2as_gazebo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(o2as_gazebo)
+project(aist_gazebo)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
