--- a/aist_moveit_config/config/fake_controllers.yaml
+++ b/aist_moveit_config/config/fake_controllers.yaml
@@ -7,7 +7,17 @@ controller_list:
       - b_bot_wrist_1_joint
       - b_bot_wrist_2_joint
       - b_bot_wrist_3_joint
+  - name: fake_a_bot_controller
+    joints:
+      - a_bot_shoulder_pan_joint
+      - a_bot_shoulder_lift_joint
+      - a_bot_elbow_joint
+      - a_bot_wrist_1_joint
+      - a_bot_wrist_2_joint
+      - a_bot_wrist_3_joint
 
 initial:
   - group: "b_bot"
+    pose: "home"
+  - group: "a_bot"
     pose: "home"
