Switched moveit package from o2as to felixvd.

--- a/o2as_easy_handeye/CMakeLists.txt
+++ b/o2as_easy_handeye/CMakeLists.txt
@@ -52,6 +52,8 @@ target_link_libraries(calibrator
   ${catkin_LIBRARIES}
   ${roscpp_LIBRARIES}
   gsl
+  lapack
+  blas
 )
 
 add_dependencies(calibrator
@@ -83,6 +85,8 @@ target_link_libraries(calibrator_test
   ${catkin_LIBRARIES}
   ${roscpp_LIBRARIES}
   gsl
+  lapack
+  blas
 )
 
 add_dependencies(calibrator_test
