--- a/aist_moveit_config/config/fake_controllers.yaml
+++ b/aist_moveit_config/config/fake_controllers.yaml
@@ -15,9 +15,29 @@ controller_list:
       - a_bot_wrist_1_joint
       - a_bot_wrist_2_joint
       - a_bot_wrist_3_joint
+  - name: fake_c_bot_controller
+    joints:
+      - c_bot_shoulder_pan_joint
+      - c_bot_shoulder_lift_joint
+      - c_bot_elbow_joint
+      - c_bot_wrist_1_joint
+      - c_bot_wrist_2_joint
+      - c_bot_wrist_3_joint
+  - name: fake_d_bot_controller
+    joints:
+      - d_bot_shoulder_pan_joint
+      - d_bot_shoulder_lift_joint
+      - d_bot_elbow_joint
+      - d_bot_wrist_1_joint
+      - d_bot_wrist_2_joint
+      - d_bot_wrist_3_joint
 
 initial:
   - group: "b_bot"
     pose: "home"
   - group: "a_bot"
+    pose: "home"
+  - group: "c_bot"
+    pose: "home"
+  - group: "d_bot"
     pose: "home"
