--- a/aist_moveit_config/config/ros_controllers.yaml
+++ b/aist_moveit_config/config/ros_controllers.yaml
@@ -22,6 +22,18 @@ aist_base_scene:
       - b_bot_wrist_1_joint
       - b_bot_wrist_2_joint
       - b_bot_wrist_3_joint
+      - c_bot_shoulder_pan_joint
+      - c_bot_shoulder_lift_joint
+      - c_bot_elbow_joint
+      - c_bot_wrist_1_joint
+      - c_bot_wrist_2_joint
+      - c_bot_wrist_3_joint
+      - d_bot_shoulder_pan_joint
+      - d_bot_shoulder_lift_joint
+      - d_bot_elbow_joint
+      - d_bot_wrist_1_joint
+      - d_bot_wrist_2_joint
+      - d_bot_wrist_3_joint
     sim_control_mode: 1  # 0: position, 1: velocity
 # Publish all joint states
 # Creates the /joint_states topic necessary in ROS
