Modified aist_moveit_config for supporting UR5e robots.

--- a/aist_moveit_config/config/controllers.yaml
+++ b/aist_moveit_config/config/controllers.yaml
@@ -1,14 +1,4 @@
 controller_list:
-  - name: b_bot_controller
-    action_ns: follow_joint_trajectory
-    type: FollowJointTrajectory
-    joints:
-      - b_bot_shoulder_pan_joint
-      - b_bot_shoulder_lift_joint
-      - b_bot_elbow_joint
-      - b_bot_wrist_1_joint
-      - b_bot_wrist_2_joint
-      - b_bot_wrist_3_joint
   - name: a_bot_controller
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
@@ -19,3 +9,33 @@ controller_list:
       - a_bot_wrist_1_joint
       - a_bot_wrist_2_joint
       - a_bot_wrist_3_joint
+  - name: b_bot_controller
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    joints:
+      - b_bot_shoulder_pan_joint
+      - b_bot_shoulder_lift_joint
+      - b_bot_elbow_joint
+      - b_bot_wrist_1_joint
+      - b_bot_wrist_2_joint
+      - b_bot_wrist_3_joint
+  - name: c_bot_controller
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    joints:
+      - c_bot_shoulder_pan_joint
+      - c_bot_shoulder_lift_joint
+      - c_bot_elbow_joint
+      - c_bot_wrist_1_joint
+      - c_bot_wrist_2_joint
+      - c_bot_wrist_3_joint
+  - name: d_bot_controller
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    joints:
+      - d_bot_shoulder_pan_joint
+      - d_bot_shoulder_lift_joint
+      - d_bot_elbow_joint
+      - d_bot_wrist_1_joint
+      - d_bot_wrist_2_joint
+      - d_bot_wrist_3_joint
