--- a/aist_skills/CMakeLists.txt
+++ b/aist_skills/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(catkin REQUIRED
 	moveit_ros_planning
 	tf
 	ur_modern_driver
+	actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -59,8 +60,6 @@ find_package(catkin REQUIRED
 ## Generate messages in the 'msg' folder
 # add_message_files(
 #   FILES
-#   Message1.msg
-#   Message2.msg
 # )
 
 ## Generate services in the 'srv' folder
@@ -71,17 +70,19 @@ find_package(catkin REQUIRED
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+	DIRECTORY action
+    FILES MoveLin.action
+)
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+    DEPENDENCIES
+    actionlib_msgs
+    std_msgs
+    geometry_msgs
+)
+
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -113,10 +114,7 @@ find_package(catkin REQUIRED
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES aist_skills
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
+    CATKIN_DEPENDS actionlib_msgs
 )
 
 ###########
