--- a/aist_examples/package.xml
+++ b/aist_examples/package.xml
@@ -49,6 +49,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>aist_graspability</build_depend>
+  <build_depend>aist_skills</build_depend>
+  <exec_depend>aist_graspability</exec_depend>
+  <exec_depend>aist_skills</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
