--- a/aist_examples/CMakeLists.txt
+++ b/aist_examples/CMakeLists.txt
@@ -7,7 +7,11 @@ project(aist_examples)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED
+    rospy
+    aist_graspability
+    aist_skills
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
