--- a/aist_skills/CMakeLists.txt
+++ b/aist_skills/CMakeLists.txt
@@ -70,10 +70,10 @@ find_package(catkin REQUIRED
 # )
 
 ## Generate actions in the 'action' folder
-add_action_files(
-	DIRECTORY action
-    FILES MoveLin.action Pick.action Place.action
-)
+#add_action_files(
+#	DIRECTORY action
+#    FILES MoveLin.action Pick.action Place.action
+#)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
