Calibrator now can save calibration results in YAML format.

--- a/o2as_easy_handeye/CMakeLists.txt
+++ b/o2as_easy_handeye/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(calibrator
 target_link_libraries(calibrator
   ${catkin_LIBRARIES}
   ${roscpp_LIBRARIES}
+  yaml-cpp
 )
 
 add_dependencies(calibrator
