CMakeLists.txt of aist_msgs updated.

--- a/aist_msgs/CMakeLists.txt
+++ b/aist_msgs/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
 # Declare the message files to be built
 #add_message_files(DIRECTORY msg)
 
-add_service_files(DIRECTORY srv)
+#add_service_files(DIRECTORY srv)
 
 # Generate actions in the 'action' folder
 add_action_files(DIRECTORY action)
