--- a/aist_moveit_config/config/ompl_planning.yaml
+++ b/aist_moveit_config/config/ompl_planning.yaml
@@ -176,35 +176,7 @@ b_bot:
     - SPARStwo
   projection_evaluator: joints(b_bot_shoulder_pan_joint,b_bot_shoulder_lift_joint)
   longest_valid_segment_fraction: 0.005
-c_bot:
-  default_planner_config: ""
-  planner_configs:
-    - SBL
-    - EST
-    - LBKPIECE
-    - BKPIECE
-    - KPIECE
-    - RRT
-    - RRTConnect
-    - RRTstar
-    - TRRT
-    - PRM
-    - PRMstar
-    - FMT
-    - BFMT
-    - PDST
-    - STRIDE
-    - BiTRRT
-    - LBTRRT
-    - BiEST
-    - ProjEST
-    - LazyPRM
-    - LazyPRMstar
-    - SPARS
-    - SPARStwo
-  projection_evaluator: joints(a_bot_shoulder_pan_joint,a_bot_shoulder_lift_joint)
-  longest_valid_segment_fraction: 0.005
-d_bot:
+all_bots:
   default_planner_config: ""
   planner_configs:
     - SBL
