Confirmed motion with real robots.

--- a/aist_routines/config/kitting.yaml
+++ b/aist_routines/config/kitting.yaml
@@ -1,4 +1,4 @@
-aist_kittings:
+aist_kitting:
   part_props: {
     typename: "PartProps",
     field_names : "robot_name, camera_name, destination, approach_offset, grasp_offset, place_offset, speed_slow, use_normals",
@@ -266,4 +266,3 @@ aist_kittings:
       }
     }
   }
-
